# pool_scanner

./: .gitignore  Cargo.toml  README.md  SPEC.md  bnb_min_liq_output.toml  bnb_output.toml  bnb_testnet_output.toml  eth_output.toml
.github/workflows/: ci.yml
config/: bnb.toml  bnb_min_liq.toml  bnb_testnet.toml  eth.toml
src/: lib.rs  main.rs
tests/: integration_tests.rs
